<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.1</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>fr.ght1pc9kc</groupId>
    <artifactId>baywatch</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <name>baywatch</name>
    <packaging>pom</packaging>

    <modules>
        <module>sandside</module>
        <module>seaside</module>
        <module>assembly</module>
    </modules>

    <properties>
        <java.version>17</java.version>

        <db.driver>org.sqlite.JDBC</db.driver>
        <db.url>jdbc:sqlite:file:${project.build.directory}/jooq_baywatch.db</db.url>
        <db.username>security</db.username>
        <db.password>security</db.password>

        <aalto-xml.version>1.3.2</aalto-xml.version>
        <findbugs.version>3.0.2</findbugs.version>
        <html-sanitizer.version>20220608.1</html-sanitizer.version>
        <jetbrains.version>23.1.0</jetbrains.version>
        <juery.version>1.2.3</juery.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <lucene.version>9.4.2</lucene.version>
        <mapstruct.version>1.5.3.Final</mapstruct.version>
        <nimbus-jose-jwt.version>9.25.6</nimbus-jose-jwt.version>
        <noexception.version>1.9.0</noexception.version>
        <scraphead.version>1.3.3</scraphead.version>
        <testy-box.version>1.5.0</testy-box.version>
        <ulid-creator.version>5.1.0</ulid-creator.version>
        <unbescape.version>1.1.6.RELEASE</unbescape.version>

        <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
        <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
        <jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
        <maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
        <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven-resources-plugin.version>3.3.0</maven-resources-plugin.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven-assembly-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>${exec-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${maven-clean-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${jib-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>pl.project13.maven</groupId>
                    <artifactId>git-commit-id-plugin</artifactId>
                    <version>${git-commit-id-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
